--- a/bms/templates/bms/client_ui/account/change_pwd.html
+++ b/bms/templates/bms/client_ui/account/change_pwd.html
@@ -1,7 +1,7 @@
 {% extends 'bms/client_ui/base_no_tab.html' %}
 {% block main-content %}
     <header class='demos-header'>
-      <h1 class="demos-title">用户登陆</h1>
+      <h1 class="demos-title">修改密码</h1>
     </header>
     <div class="weui-cells weui-cells_form">
         <form id="change_pwd_form">
