--- a/bms/templates/bms/client_ui/base_no_tab.html
+++ b/bms/templates/bms/client_ui/base_no_tab.html
@@ -25,5 +25,8 @@
 <script src="{% static 'jquery-weui/js/jquery-weui.min.js'%}"></script>
 <script src="{% static 'jquery-weui/js/city-picker.js'%}"></script>
 <script src="{% static 'jquery-weui/js/tool-kit.js'%}"></script>
+{% block script-content %}
+{% endblock script-content %}
+
 </body>
 </html>
