--- a/bms/templates/bms/client_ui/account/statement.html
+++ b/bms/templates/bms/client_ui/account/statement.html
@@ -5,4 +5,8 @@
     <header class='demos-header'>
       <h1 class="demos-title">协议及隐私声明</h1>
     </header>
+    <div class='demos-content-padded'>
+        {#<a href="javascript:;" class="weui-btn weui-btn_primary" id="recharge">充值</a>#}
+        <a href="../redirect_pre_page/index#subtab3" class="weui-btn weui-btn_plain-default">返回</a>
+    </div>
 {% endblock main-content %}
